minimun classname change on markup

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     <header class="header">
       <nav class="navbar">
         <button class="button togglemenubutton" id="togglemenubutton" type="button" aria-label="toggle menu" aria-haspopup="menu" aria-expanded="false"><img class="buttonicon togglemenuicon" src="./assets/images/icon-menu.svg" alt=""></button>
-        <div class="menuoverlay hide">
+        <div class="menuoverlay menuoverlay--hide">
           <ul class="mainmenu" role="menu" aria-labelledby="togglemenubutton">
             <li class="mainmenu__item"><a class="mainmenu__link" href="#">Collections</a></li>
             <li class="mainmenu__item"><a class="mainmenu__link" href="#">Men</a></li>
